// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyField > renders the CopyField component 1`] = `
<div
  class="copy-field"
>
  <input
    class="dusk-textbox dusk-textbox-text copy-field__content"
    readonly=""
    type="text"
  />
  
   
  <button
    aria-label="Copy Address"
    class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button copy-field__button"
    type="button"
  >
    <svg
      class="dusk-icon dusk-icon--size--default dusk-button__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
      />
    </svg>
    
     
    
  </button>
</div>
`;

exports[`CopyField > renders the CopyField component with the copy button disabled 1`] = `
<div
  class="copy-field"
>
  <input
    class="dusk-textbox dusk-textbox-text copy-field__content"
    readonly=""
    type="text"
  />
  
   
  <button
    aria-label="Copy Address"
    class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button copy-field__button"
    disabled=""
    type="button"
  >
    <svg
      class="dusk-icon dusk-icon--size--default dusk-button__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
      />
    </svg>
    
     
    
  </button>
</div>
`;
